# sdl2-image

./: .gitignore  LICENSE  README.md  sdl2-image.cabal
examples/: Ex1.hs  sdl2-image-examples.cabal
src/Graphics/UI/SDL/: Image.hsc
src/Graphics/UI/SDL/Image/: Version.hsc
src/cbits/: sdl2_image_wrapper.c  sdl2_image_wrapper.h
test/: TestUtils.hs
test/Graphics/UI/SDL/: ImageSpec.hs
test/Graphics/UI/SDL/Image/: VersionSpec.hs
test/images/: test.tiff
