name:                sdl2-image
version:             0.2
synopsis:            Haskell bindings for SDL_image 2.0
description:
        Low-level bindings to the SDL_image library, version 2.0.3 or greater.
        For use with the Haskell package sdl2, which binds to SDL 2.0 or greater.

license:             BSD3
license-file:        LICENSE
author:              Owen D. Smith
maintainer:          ods94043@yahoo.com
copyright:           Copyright © 2014  Owen D. Smith
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
  src/cbits/sdl2_image_wrapper.c,
  src/cbits/sdl2_image_wrapper.h,
  README.md

library
  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Graphics.UI.SDL.Image
    Graphics.UI.SDL.Image.Version

  c-sources:
    src/cbits/sdl2_image_wrapper.c

  include-dirs:
    src/cbits

  includes:
    SDL_image.h
    sdl2_image_wrapper.h

  extra-libraries:
    SDL2_image

  pkgconfig-depends:
    SDL2_image >= 1.1.0

  build-depends:
    base == 4.*,
    sdl2 == 1.1.*

  default-language:
    Haskell2010

test-suite test-sdl2-image
  type: exitcode-stdio-1.0

  hs-source-dirs:
    src
    test

  main-is:
    Spec.hs

  ghc-options:
    -Wall -fhpc

  build-depends:
    base == 4.*,
    sdl2 == 1.1.*,
    sdl2-image == 0.2.*,
    HUnit == 1.2.*,
    hspec == 1.11.*

  default-language:
    Haskell2010
